// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stores a sequence of edits 1`] = `
{
  "maxDepth": 9007199254740991,
  "period": 3,
  "serial": 3,
  "stack": {
    "edits": [
      {
        "change": [
          [
            1,
            "a",
          ],
        ],
        "timestamp": 0,
      },
      {
        "change": [
          [
            0,
            1,
          ],
          [
            1,
            "b",
          ],
        ],
        "timestamp": 10,
      },
      {
        "change": [
          [
            0,
            2,
          ],
          [
            1,
            "c",
          ],
        ],
        "timestamp": 20,
      },
    ],
    "next": null,
    "snapshot": "abc",
  },
}
`;

exports[`stores a sequence of edits onto the next stack 1`] = `
{
  "maxDepth": 9007199254740991,
  "period": 3,
  "serial": 4,
  "stack": {
    "edits": [
      {
        "change": [
          [
            0,
            1,
          ],
          [
            1,
            "b",
          ],
        ],
        "timestamp": 10,
      },
      {
        "change": [
          [
            0,
            2,
          ],
          [
            1,
            "c",
          ],
        ],
        "timestamp": 20,
      },
      {
        "change": [
          [
            0,
            3,
          ],
          [
            1,
            "d",
          ],
        ],
        "timestamp": 30,
      },
    ],
    "next": {
      "edits": [
        null,
        null,
        {
          "change": [
            [
              1,
              "abc",
            ],
          ],
          "timestamp": 20,
        },
      ],
      "next": null,
      "snapshot": "abc",
    },
    "snapshot": "abcd",
  },
}
`;

exports[`stores a sequence of edits onto the third stack 1`] = `
{
  "maxDepth": 9007199254740991,
  "period": 3,
  "serial": 14,
  "stack": {
    "edits": [
      {
        "change": [
          [
            0,
            11,
          ],
          [
            1,
            "l",
          ],
        ],
        "timestamp": 110,
      },
      {
        "change": [
          [
            0,
            12,
          ],
          [
            1,
            "m",
          ],
        ],
        "timestamp": 120,
      },
      {
        "change": [
          [
            0,
            13,
          ],
          [
            1,
            "n",
          ],
        ],
        "timestamp": 130,
      },
    ],
    "next": {
      "edits": [
        {
          "change": [
            [
              0,
              3,
            ],
            [
              1,
              "def",
            ],
          ],
          "timestamp": 50,
        },
        {
          "change": [
            [
              0,
              6,
            ],
            [
              1,
              "ghi",
            ],
          ],
          "timestamp": 80,
        },
        {
          "change": [
            [
              0,
              9,
            ],
            [
              1,
              "jkl",
            ],
          ],
          "timestamp": 110,
        },
      ],
      "next": {
        "edits": [
          null,
          null,
          {
            "change": [
              [
                1,
                "abcdefghi",
              ],
            ],
            "timestamp": 80,
          },
        ],
        "next": null,
        "snapshot": "abcdefghi",
      },
      "snapshot": "abcdefghijkl",
    },
    "snapshot": "abcdefghijklmn",
  },
}
`;
